# Slycot

./: setup.py
slycot/: analysis.py
slycot/src/: analysis.pyf  math.pyf  synthesis.pyf  transform.pyf
slycot/tests/: CMakeLists.txt  test_ab13bd.py
